k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedb2
  namespace: kubedb2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedb2
  template:
    metadata:
      labels:
        app: kubedb2
    spec:
      containers:
        - name: app
          image: almuko/kubedb2:latest
          ports:
            - containerPort: 9003
