k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedb2
  namespace: kubedb2
spec:
  type: NodePort
  selector:
    app: kubedb2
  ports:
    - port: 80
      targetPort: 9003
      protocol: TCP
